--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,7 +85,7 @@ jobs:
         with:
           # Параметр context: ./kittygram_backend/ указывает, что нужный Dockerfile
           # находится в ./kittygram_backend/
-          context: ./kittygram_backend/
+          context: ./backend/
           # Параметр push: true указывает, что образ нужно не только собрать,
           # но и отправить на Docker Hub
           push: true
@@ -93,7 +93,7 @@ jobs:
           # Для каждого пересобранного образа
           # устанавливаем тег latest, чтобы потом
           # на сервере и в docker-compose.yml не указывать версию
-          tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_backend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/backend:latest
 
   frontend_tests:
     runs-on: ubuntu-latest
@@ -194,7 +194,7 @@ jobs:
           # которые нужно выполнить на сервере,
           # с которым установлено соединение
           script: |
-            cd taski
+            cd kittygram_final
             # Выполняет pull образов с Docker Hub
             sudo docker compose -f docker-compose.production.yml pull
             sudo docker compose -f docker-compose.production.yml down
