--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -4,7 +4,7 @@ volumes:
   pg_data_production:
   static_volume:
   media:
-# Всё отличие — заменяем build на image и указываем, какой образ использовать
+
 services:
   db:
     image: postgres:13.10
@@ -18,16 +18,16 @@ services:
       - static_volume:/backend_static
       -  media:/app/media/
   frontend:
-    image: artemproyd/kittygram_frontend # Качаем с Docker Hub
+    image: artemproyd/kittygram_frontend
     env_file: .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
-      - static_volume:/frontend_static
+      - static_volume:/static_fontend
   gateway:
-    image: artemproyd/kittygram_gateway  # Качаем с Docker Hub
+    image: artemproyd/kittygram_gateway
     env_file: .env
     volumes:
       - static_volume:/static/
       - media:/media/
     ports:
-      - 8000:80
+      - 9000:80
