--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,25 +1,36 @@
 server {
-  listen 80;
-  server_tokens off;
-  index index.html;
-  client_max_body_size 20M;
+    listen 80;
+    server_tokens off;
+    index index.html;
+    client_max_body_size 20M;
 
-  location /api/ {
-    proxy_set_header Host $http_host;
-    proxy_pass http://backend:9000/api/;
-  }
-  location /admin/ {
-    proxy_set_header Host $http_host;
-    proxy_pass http://backend:9000/admin/;
-  }
+    location / {
+      root /usr/share/nginx/html/static;
+      index index.html;
+      try_files $uri $uri/ /index.html;
+    }
 
-  location / {
-    alias /static/;
-    try_files $uri $uri/ /index.html;
-  }
+    location /static/admin/ {
+        alias /usr/share/nginx/html/static/admin/;
+    }
 
-  location /media/ {
-    alias /media/;
-  }
+    location /static/ {
+        alias /usr/share/nginx/html/static/static/;
+    }
 
+
+    location /media/ {
+        root /usr/share/nginx/html;
+        autoindex on;
+    }
+
+    location /api/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:9000/api/;
+    }
+
+    location /admin/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:9000/admin/;
+    }
 }
