--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
 POSTGRES_DB=kittygram
 POSTGRES_USER=kittygram_user
 POSTGRES_PASSWORD=kittygram_password
-DB_NAME=kittygram
+DB_PORT=5432
+DB_HOST=db
+
+STRIPE_SECRET_KEY=секретный_ключ
+STRIPE_PUBLIC_KEY=публичный_ключ
+REACT_APP_STRIPE_PUBLIC_KEY=публичный_ключ
+
+DJANGO_SECRET_KEY=django-insecure-ключ
